updated sample.env to include database url sample

--- a/.sample.env
+++ b/.sample.env
@@ -5,3 +5,4 @@ YELP_API_KEY=<ENTER YOUR YELP API KEY>
 YELP_CLIENT_ID=<ENTER YOUR YELP CLIENT ID>
 MOVIEDB_API_KEY=<ENTER YOUR MOVIE DB API KEY>
 HIKINGPROJECT_API_KEY=<ENTER YOUR HIKING PROJECT API KEY>
+DATABASE_URL=postgresql://<USERNAME>:<PASSWORD>@localhost:<DATABASE PORT>/<DATABASE NAME>
